--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,37 @@
 * {
     box-sizing: border-box;
+    align: center;
+
   }
   
   body {
+    
     font-family: sans-serif;
     background-color: #181c1f;
     color: #bdd1d4;
     margin: 2rem;
+    text-align: center;
+    align-items: center;
+    
   }
   
+
+
+  button {
+    font: inherit;
+    font-size: 0.85rem;
+    background-color: #282f33;
+    border: none;
+    border-bottom-color: #f3e248;
+    color: #e0eff1;
+    border-radius: 4px 4px 0 0;
+    padding: 0.75rem 1rem;
+    cursor: pointer;
+    transition: all 0.2s ease-out;
+  }
+
   header {
     margin: 2rem 0;
-    display: flex;
     gap: 1.5rem;
     align-items: center;
   }
@@ -30,12 +50,63 @@
     margin: 0;
     color: #dbd7b1;
   }
-  
+ 
+
+  form {
+    padding: 2rem 3rem;
+  }
+
+  div {
+    padding: 1rem 1rem;
+  }
+
+  .added-subTask {
+    font-size: 0.85rem;
+    background-color: #282f33;
+    border: none;
+    color: #e0eff1;
+    padding: 0.75rem 1rem;
+}
+
+    #btn-checkbox {
+        top: 0;
+        left: 0;
+        height: 25px;
+        width: 25px;
+        accent-color: #282f33;
+    }
+
+    #btn-checkbox:checked {
+        accent-color: #282f33;
+    }
+
+    #btn-checkbox:hover {
+        background-color: #ffffff;
+    }
+    
+    #text-mainTask {
+        font-size: 0.85rem;
+        background-color: #282f33;
+        border: none;
+        color: #e0eff1;
+        padding: 0.75rem 1rem;
+    }
+
+    #text-subTask {
+        font-size: 0.85rem;
+        background-color: #282f33;
+        border: none;
+        color: #e0eff1;
+        padding: 0.75rem 1rem;
+    }
+
   #tabs {
     max-width: 32rem;
     margin: 2rem 0;
     overflow: hidden;
   }
+  
+ 
   
   #tabs menu {
     margin: 0;
@@ -44,19 +115,8 @@
     gap: 0.25rem;
   }
   
-  #tabs button {
-    font: inherit;
-    font-size: 0.85rem;
-    background-color: #282f33;
-    border: none;
-    border-bottom-color: #f3e248;
-    color: #e0eff1;
-    border-radius: 4px 4px 0 0;
-    padding: 0.75rem 1rem;
-    cursor: pointer;
-    transition: all 0.2s ease-out;
-  }
-  
+    
+
   #tabs button:hover,
   #tabs button.active {
     background-color: #f3e248;
