--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@
     align-items: center;
     
   }
+
+  .subtasks{
+    text-align: left;
+    align-items: left;
+  }
   
 
 
@@ -70,6 +75,14 @@
         width: 25px;
         accent-color: #282f33;
     }
+
+    .small-checkboxes {
+      top: 0;
+      left: 0;
+      height: 15px;
+      width: 15px;
+      accent-color: #282f33;
+  }
 
     .checkboxes:checked {
         accent-color: #282f33;
